<resources>
    <string name="app_name">玩清单</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="wan_android">Wan Android</string>
    <string name="ing">进行中</string>
    <string name="finished">已完成</string>
    <string name="use_one">只用这一个</string>
    <string name="work">工作</string>
    <string name="learn">学习</string>
    <string name="life">生活</string>
    <string name="please_input_content">请输入内容</string>
    <string name="add_detail_content">添加详情内容</string>
    <string name="confirm">确定</string>
    <string name="please_input_todo">请输入Todo</string>
    <string name="detail_content">详情内容</string>
    <string name="success_delete">删除成功</string>
    <string name="confirm_delete">确认删除</string>
    <string name="cancel">取消</string>
    <string name="success_login">登录成功</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="success_add">添加成功</string>
    <string name="please_check_network">请检查网络</string>
    <string name="link_out_time">连接超时</string>
    <string name="example_eat">例如，吃饭</string>
    <string name="loading">加载中…</string>
</resources>
