<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="200dp"
        android:layout_height="@dimen/default_height"
        android:text="@string/add_detail_content"
        android:gravity="center"
        android:textColor="@color/textColorPrimary"/>

    <EditText
        android:id="@+id/etEditContent"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="@dimen/spacing_xmedium"
        android:hint="@string/please_input_content"
        android:textSize="@dimen/sp_12"
        android:gravity="start"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="end"
        android:textColor="@color/colorAccent"
        style="@style/Base.Widget.AppCompat.ActionButton.CloseMode"
        android:textSize="@dimen/sp_12"/>

</LinearLayout>